<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.BuildingFragment">


    <ImageView
        android:id="@+id/img_building"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_nombre_depto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="Placeholder1"
        app:layout_constraintEnd_toStartOf="@+id/tv_numero_depto2"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_building" />

    <TextView
        android:id="@+id/tv_numero_depto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:text="Placeholder2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_building" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_depto2">

        <CheckBox
            android:id="@+id/cb_luces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_luces" />

        <CheckBox
            android:id="@+id/cb_dormitorio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_dormitorio" />

        <CheckBox
            android:id="@+id/cb_cocina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_cocina" />

        <CheckBox
            android:id="@+id/cb_bano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_bano" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rb_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_normal" />

            <RadioButton
                android:id="@+id/rb_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_regular" />

            <RadioButton
                android:id="@+id/rb_mala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_mala" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="28dp"
        android:text="@string/btn_calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp"
        android:text="@string/btn_correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/tv_resultado"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>